  * GetProductProperty: if no service context, tries to find property in %scriptpah%/properties.conf
  * GetProductPropertyList: if no service context, tries to find property in %scriptpath%/properties.conf
  * new: stringlist literals in json style are allowed now (set $list$ = '["he","ho"]')
  * fix overwrite GUI messages by standard skinreload from  doAktionen


-- d.oertel <d.oertel@uib.de> Fri, 19 Nov 2021 15:00


opsi-script (4.12.4.31) stable; urgency=low

  * osfunc: AllCopyRecursive: for better performance:
        doNotChangeAccessRights: boolean = True;
  * osparser: executeWith + powershellcall: enable runasloggedonuser
  * osfilehelper: MakeBakFiles: correct format mask for log backups
  * osparser: files section: move / rename: allow also for directories

-- d.oertel <d.oertel@uib.de> Tue, 16 Nov 2021 15:00

opsi-script (4.12.4.30) stable; urgency=low

 * osfuncwin: fixed that opsi-script crashed if Windows API function GetFirmwareType is not available in kernel32.dll 
   (for example on Windows 7/ Windows Server 2008)

-- j.werner <j.werner@uib.de> Wed, 27 Oct 2021 12:22

opsi-script (4.12.4.29) stable; urgency=low

 * osfuncwin: WinIsUefi uses new function GetBiosMode if Windows Verison >= Windows10.
    This function calls the Windows API function GetFirmwareType to detect Bios mode
 * osparser: doLDAPSearch: callLDAP: if port 636 then use ssl
 * remove ldapsend.pas from opsi-script dir (use from synapse)
 * osfilehelper: MakeBakFiles: use two digit rotation numbers if log_rotation_count > 9
                               use three digit rotation numbers if log_rotation_count > 99
 * osconf: configuration: log_rotation_count (default = 8)  (max=999
   will need new config: opsi-script.global.log_rotation_count to change (allowed 0 - 999)
 * osfuncwin: getW10Release: Fixes detection of w10 release > 2009 (21h1) ; fixes #4665
   getW10Release is now also called from osparser

-- d.oertel <d.oertel@uib.de> Mon, 18 Oct 2021 15:00

