@@ -15,7 +15,8 @@ opsi-script (4.12.4.32) stable; urgency=low
   * GetProductPropertyList: if no service context, tries to find property in %scriptpath%/properties.conf
   * new: stringlist literals in json style are allowed now (set $list$ = '["he","ho"]')
   * fix overwrite GUI messages by standard skinreload from  doAktionen
-
+  * new: allow after DefVar inital value: defvar $str$ = "huhu"
+  * new: allow after DefStringlist inital value: defstringlist $list$ = '["he","ho"]'
 
 -- d.oertel <d.oertel@uib.de> Fri, 19 Nov 2021 15:00
 
